--- a/DictionaryChallenge.xcodeproj/xcshareddata/xcschemes/DictionaryChallenge.xcscheme
+++ b/DictionaryChallenge.xcodeproj/xcshareddata/xcschemes/DictionaryChallenge.xcscheme
@@ -26,6 +26,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
       <PostActions>
          <ExecutionAction
@@ -55,6 +56,11 @@
                BlueprintName = "DictionaryChallengeTests"
                ReferencedContainer = "container:DictionaryChallenge.xcodeproj">
             </BuildableReference>
+            <SkippedTests>
+               <Test
+                  Identifier = "DictionaryChallengeTests/testCreateAllStatesAndCapitals()">
+               </Test>
+            </SkippedTests>
          </TestableReference>
       </Testables>
       <MacroExpansion>
@@ -73,6 +79,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
